            - Triangle<3>::Type is deprecated, and is now an alias for the new
              global type TriangleType.  Moreover, this is now a scoped
              enumeration for better type safety.  The old enum constants
              (e.g., Triangle<3>::CONE) are likewise now deprecated aliases for
              the new scoped enum values (e.g., TriangleType::Cone).
            - The 3-D routines Triangle<3>::type() and Triangle<3>::subtype()
              have been renamed to triangleType() and triangleSubtype(), and
              are now available for triangles within triangulations of any
              dimension ≥ 3.  The old 3-D routines are now deprecated.
        Class Face<dim, dim-1>:
            - New routines lock(), unlock(), and isLocked().
        Class FacePair:
            - Added a spaceship operator (<=>) for comparisons.
        Class FacetPairing<dim>:
            - New generic routine hasMultiEdge(), which generalises the
              3-D routine hasTripleEdge().
            - New routine hash(), which uses the tight encoding.
        Class FacetSpec<dim>:
            - New routine hash(), which uses the tight encoding.
            - Added a spaceship operator (<=>) for comparisons.  This has the
              effect of implementing all comparison operators, not just
              less-than (<) and less-than-or-equal (<=) as before.
        Enum FileFormat:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., REGINA_XML_GEN_3) have been
              renamed as scoped enum values (e.g., FileFormat::XmlGen3).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class FixedArray:
            - New class for stack-based fixed-size arrays whose sizes are not
              known until runtime.
        Class Flags<T>:
            - Updated to support both scoped and unscoped enumerations.