@@ -104,6 +104,9 @@ void addTriangle4(pybind11::module_& m) {
         .def("triangleType", &Triangle<4>::triangleType, rbase::triangleType)
         .def("triangleSubtype", &Triangle<4>::triangleSubtype,
             rbase::triangleSubtype)
+        .def("formsMobiusBand", &Triangle<4>::formsMobiusBand,
+            rbase::formsMobiusBand)
+        .def("formsCone", &Triangle<4>::formsCone, rbase::formsCone)
         .def("degree", &Triangle<4>::degree, rbase::degree)
         .def("isBoundary", &Triangle<4>::isBoundary, rbase::isBoundary)
         .def("isLinkOrientable", &Triangle<4>::isLinkOrientable,
